Two Phase Drops: ttl indexes produce error messages when run on a dropping collection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 3.5.10
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • Repl 2017-07-10
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The implementation of Two Phase drops is causing error messages in the logs, see the following:

      2017-06-15T15:23:00.151+0000 E INDEX    [TTLMonitor] namespace 'ttlTest.system.drop.1497540178i1t1.ttl_coll' doesn't allow deletes, skipping ttl job for: { v: 2, key: { ttl: 1.0 }, name: "ttl_1", ns: "ttlTest.system.drop.1497540178i1t1.ttl_coll", expireAfterSeconds: 0.0 }
      

      Should these messages be tagged as warnings or should ttl deletes be stopped for dropping collections? (Or both).

            Assignee:
            Benety Goh
            Reporter:
            James O'Leary
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: