SERVER-29685 do not process ttl indexes on drop-pending collections